src/components/pagination/_pagination_button.scss
.euiPaginationButton {
  font-size: $euiFontSizeS;
  padding: 0;
  text-align: center;
  border-radius: $euiBorderRadius;
  line-height: 1;
}

.euiPaginationButton-isActive {
  font-weight: $euiFontWeightBold;

  &#{&} {
    color: $euiColorPrimary;

    .euiButtonEmpty__content {
      cursor: default;
    }

    &,
    &:hover {
      text-decoration: underline;
    }
  }
}

.euiPaginationButton-isPlaceholder {
  align-items: baseline;
  color: $euiButtonColorDisabledText;
  font-size: $euiFontSizeS;
  padding: 0 $euiSizeS;
  height: $euiSizeL;
  padding-top: $euiSizeM / 2;
}

